[order] refactor: remove needless product type (#31)
- remove product type at model, usecase , repository layers
