# services/order/doc/api/openapi.yaml
@@ -9,10 +9,10 @@ info:
   license:
     name: MIT
     url: https://github.com/metalalive/e_commerce/blob/master/LICENSE
-  version: 1.3.0
+  version: 1.4.0
 
 servers:
-  - url: https://order-proc.site.not.ready/api/v1.3.0
+  - url: https://order-proc.site.not.ready/api/v1.4.0
 tags:
   - name: cart
     description: shopping cart for user collecting items to checkout
@@ -32,8 +32,6 @@ paths:
               items:
                 type: object
                 properties:
-                  product_type:
-                    $ref: '#/components/schemas/ProductType'
                   product_id:
                     $ref: '#/components/schemas/ProductId'
                   async_stock_chk:
@@ -73,8 +71,6 @@ paths:
                 items:
                   type: object
                   properties:
-                    product_type:
-                      $ref: '#/components/schemas/ProductType'
                     product_id:
                       $ref: '#/components/schemas/ProductId'
                     err_type:
@@ -357,12 +353,6 @@ components:
     EmptyObject:
       type: object
       
-    ProductType:
-      type: integer
-      format: uint8
-      maximum: 2
-      minimum: 1
-      
     ProductId:
       type: integer
       format: uint64
@@ -512,8 +502,6 @@ components:
     BaseOrderLineObject:
       type: object
       properties:
-        product_type:
-          $ref: '#/components/schemas/ProductType'
         product_id:
           $ref: '#/components/schemas/ProductId'
         quantity:
@@ -566,8 +554,6 @@ components:
       properties:
         seller_id:
           $ref: '#/components/schemas/SellerId'
-        product_type:
-          $ref: '#/components/schemas/ProductType'
         product_id:
           $ref: '#/components/schemas/ProductId'
         reason:
@@ -585,8 +571,6 @@ components:
       properties:
         seller_id:
           $ref: '#/components/schemas/SellerId'
-        product_type:
-          $ref: '#/components/schemas/ProductType'
         product_id:
           $ref: '#/components/schemas/ProductId'
         reason:
